--- a/index.html
+++ b/index.html
@@ -144,6 +144,36 @@
             color: #555;
         }
 
+        .clients-section, .projects-section {
+            padding: 3em 1em;
+            text-align: center;
+            background: #f4f7fa;
+        }
+
+        .clients-section h2, .projects-section h2 {
+            color: #007BFF;
+            margin-bottom: 1.5em;
+            font-size: 2.5em;
+        }
+
+        .clients-logos, .projects-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .clients-logos img, .projects-gallery img {
+            width: 150px;
+            height: 100px;
+            object-fit: contain;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .clients-logos img:hover, .projects-gallery img:hover {
+            transform: scale(1.1);
+        }
+
         .contact-btn {
             background-color: #007BFF;
             color: white;
@@ -251,6 +281,8 @@
 
     <nav class="sticky-nav">
         <a href="#services">خدماتنا</a>
+        <a href="#clients">عملاؤنا</a>
+        <a href="#projects">المشاريع الأخيرة</a>
         <a href="#blog">المدونة</a>
         <a href="#contact">اتصل بنا</a>
     </nav>
@@ -268,6 +300,26 @@
                 </ul>
             </section>
 
+            <section id="clients" class="clients-section fade-in">
+                <h2 class="slide-in">عملاؤنا</h2>
+                <div class="clients-logos">
+                    <img src="https://example.com/client1-logo.png" alt="Client 1 Logo">
+                    <img src="https://example.com/client2-logo.png" alt="Client 2 Logo">
+                    <img src="https://example.com/client3-logo.png" alt="Client 3 Logo">
+                    <img src="https://example.com/client4-logo.png" alt="Client 4 Logo">
+                </div>
+            </section>
+
+            <section id="projects" class="projects-section fade-in">
+                <h2 class="slide-in">المشاريع الأخيرة</h2>
+                <div class="projects-gallery">
+                    <img src="https://example.com/project1.jpg" alt="Project 1">
+                    <img src="https://example.com/project2.jpg" alt="Project 2">
+                    <img src="https://example.com/project3.jpg" alt="Project 3">
+                    <img src="https://example.com/project4.jpg" alt="Project 4">
+                </div>
+            </section>
+
             <section id="blog" class="fade-in">
                 <h2 class="slide-in">المدونة</h2>
                 <p>تابع آخر أخبار التسويق الإلكتروني ونصائحنا الحصرية لتحسين أداء أعمالك على الإنترنت.</p>
@@ -276,39 +328,42 @@
 
             <section id="contact" class="fade-in">
                 <h2 class="slide-in">اتصل بنا</h2>
-                <p>هل لديك سؤال أو استفسار؟ تواصل معنا اليوم وسنكون سعداء بمساعدتك.</p>
-                <p>البريد الإلكتروني: <a href="mailto:hamdaouimokrane@gmail.com" class="contact-btn">hamdaouimokrane@gmail.com</a></p>
+                <p>هل لديك سؤال أو استفسار؟ لا تتردد في الاتصال بنا عبر البريد الإلكتروني: <a href="mailto:hamdaouimokrane@gmail.com">hamdaouimokrane@gmail.com</a></p>
+                <a href="mailto:hamdaouimokrane@gmail.com" class="contact-btn">تواصل معنا</a>
             </section>
         </div>
     </main>
 
     <footer>
-        <p>© 2024 شركة HM للتسويق الإلكتروني. جميع الحقوق محفوظة.</p>
         <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
+        <p>&copy; 2024 شركة HM للتسويق الإلكتروني. جميع الحقوق محفوظة.</p>
     </footer>
 
-    <a href="#" class="back-to-top"><i class="fas fa-chevron-up"></i></a>
+    <div class="back-to-top" onclick="scrollToTop()">
+        <i class="fas fa-arrow-up"></i>
+    </div>
 
     <script>
-        // إزالة تأثير التحميل
-        window.addEventListener('load', () => {
+        document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('loader').style.display = 'none';
         });
 
-        // إظهار زر العودة إلى الأعلى عند التمرير
-        window.addEventListener('scroll', () => {
-            const backToTopButton = document.querySelector('.back-to-top');
-            if (window.scrollY > 500) {
-                backToTopButton.style.display = 'block';
+        window.addEventListener('scroll', function() {
+            if (window.scrollY > 100) {
+                document.querySelector('.back-to-top').style.display = 'block';
             } else {
-                backToTopButton.style.display = 'none';
+                document.querySelector('.back-to-top').style.display = 'none';
             }
         });
+
+        function scrollToTop() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
     </script>
 </body>
 </html>
